fix: don't break screen size on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
 #main-container {
-  padding: 20px;
   display: flex;
 }
 
